not use deprecated method clazz.newInsance()